datatables header alignment fix

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,7 +14,7 @@ textarea {
 */
 
 
-.datatable {
+.dataTables_scrollHeadInner, .datatable {
     width: 100% !important;
 }
 
